--- a/index.html
+++ b/index.html
@@ -1,173 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Assets/style.css"/>
+    <title>Day Planner</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../Assets/style.css" />
-  <title>Work Day Scheduler</title>
-</head>
-
-<body>
-  <header class="jumbotron">
-    <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"></p>
-  </header>
-  <div class="container">
-
-
-    <div id="hour-6" class="row time-block past">
-      <div class="col-md-2 hour">
-        6:00am
-      </div>
-      <textarea class="col-md-9 description" id="text-6"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-7" class="row time-block past">
-      <div class="col-md-2 hour">
-        7:00am
-      </div>
-      <textarea class="col-md-9 description" id="text-7"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-8" class="row time-block past">
-      <div class="col-md-2 hour">
-        8:00am
-      </div>
-      <textarea class="col-md-9 description" id="text-8"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-9" class="row time-block past">
-      <div class="col-md-2 hour">
-        9:00am
-      </div>
-      <textarea class="col-md-9 description" id="text-9"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-10" class="row time-block past">
-      <div class="col-md-2 hour">
-        10:00am
-      </div>
-      <textarea class="col-md-9 description" id="text-10"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-11" class="row time-block past">
-      <div class="col-md-2 hour">
-        11:00am
-      </div>
-      <textarea class="col-md-9 description" id="text-11"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-12" class="row time-block past">
-      <div class="col-md-2 hour">
-        12:00pm
-      </div>
-      <textarea class="col-md-9 description" id="text-12"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-13" class="row time-block past">
-      <div class="col-md-2 hour">
-        1:00pm
-      </div>
-      <textarea class="col-md-9 description" id="text-13"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-14" class="row time-block past">
-      <div class="col-md-2 hour">
-        2:00pm
-      </div>
-      <textarea class="col-md-9 description" id="text-14"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-    <div id="hour-15" class="row time-block past">
-      <div class="col-md-2 hour">
-        3:00pm
-      </div>
-      <textarea class="col-md-9 description" id="text-15"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-16" class="row time-block past">
-      <div class="col-md-2 hour">
-        4:00pm
-      </div>
-      <textarea class="col-md-9 description" id="text-16"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-
-    <div id="hour-17" class="row time-block past">
-      <div class="col-md-2 hour">
-        5:00pm
-      </div>
-      <textarea class="col-md-9 description" id="text-17"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
+  <body>
+    <header class="jumbotron">
+      <h1 class="display-3">Day Planer</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead"></p>
+    </header>
     
-    <div id="hour-18" class="row time-block past">
-      <div class="col-md-2 hour">
-        6:00pm
+    <div class="container">
+
+        <div class="row time-block" id="9">
+          <div class="col-1 hour">9 AM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="10">
+          <div class="col-1 hour">10 AM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="11">
+          <div class="col-1 hour">11 AM</div>
+          <textarea class="col-10 schedule"id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="12">
+          <div class="col-1 hour">12 PM</div>
+          <textarea class="col-10 schedule"id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="13">
+          <div class="col-1 hour">1 PM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="14">
+          <div class="col-1 hour">2 PM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="15">
+          <div class="col-1 hour">3 PM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="16">
+          <div class="col-1 hour">4 PM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
+        <div class="row time-block" id="17">
+          <div class="col-1 hour">5 PM</div>
+          <textarea class="col-10 schedule" id="text"></textarea>
+          <button class="col-1 saveBtn">Save</button>
+        </div>
       </div>
-      <textarea class="col-md-9 description" id="text-18"></textarea>
-      <button class="btn saveBtn col-md-1">
-        <i class="icon fas fa-save"></i>
-      </button>
-    </div>
-
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="../Assets/script.js"></script>
-</body>
-
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="Assets/script.js"></script>
+  </body>
 </html>
